model/unpackaged/objects/SIP_Task_Flow__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failure_Emails__c</fullName>
        <label>Failure Emails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <label>Flow Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Scheduled_Date__c</fullName>
        <label>Last Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_Retry_Count__c</fullName>
        <inlineHelpText>Maximum Number of retries in case of Task Flow Failure and &quot;Retry If Fail?&quot; is set to true.</inlineHelpText>
        <label>Max Retry Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retry_If_Fail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to true to retry the Task Flow in case of a failure.</inlineHelpText>
        <label>Retry If Fail?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>SIP_Schedule__c</referenceTo>
        <relationshipLabel>SIP Task Flows</relationshipLabel>
        <relationshipName>SIP_Task_Flows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Success_Emails__c</fullName>
        <label>Success Emails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Warning_Emails__c</fullName>
        <label>Warning Emails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>SIP Task Flow</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unique_ID__c</columns>
        <columns>Flow_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Schedule__c</columns>
        <columns>Last_Scheduled_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TKF{00000000}</displayFormat>
        <label>SIP Task Flow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIP Task Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>